<resources>
    <string name="app_name">Tickets</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="difficult_route">Сложный\nмаршрут</string>
    <string name="anywhere">Куда угодно</string>
    <string name="weekends">Выходные</string>
    <string name="last_minute_tickets">Горящие\nбилеты</string>
    <string name="where_is_Minsk_from">Откуда - Минск</string>
    <string name="where_to_Turkey">Куда - Турция</string>
    <string name="Istanbul">Стамбул</string>
    <string name="popular_destination">Популярное направление</string>
    <string name="Ural_Airlines">Уральские авиалинии</string>
    <string name="_2_390">2 390 ₽</string>
    <string name="Minsk">Минск</string>
    <string name="Sochi">Сочи</string>
    <string name="back">обратно</string>
    <string name="Feb_24_Sat">24 фев, сб</string>
    <string name="economy">1, эконом</string>
    <string name="filters">фильтры</string>
    <string name="direct_flights">Прямые рейсы</string>
    <string name="show_all">Показать все</string>
    <string name="subscription_to_the_price">Подписка на цену</string>
    <string name="view_all_tickets">Посмотреть все билеты</string>
    <string name="search_for_cheap_flights">Поиск дешевых\nавиабилетов</string>
    <string name="where_is_Moscow_from">Откуда - Москва</string>
    <string name="where_to_Turkeys">Куда - Турция</string>
    <string name="musical_hotel">Музыкально отлететь</string>
    <string name="Moscow_Sochi">Москва-Сочи</string>
    <string name="February_23_1_passenger">23 февраля, 1 пассажир</string>
    <string name="price_chart">График цен</string>
    <string name="most_convenient">Самый удобный</string>
    <string name="_6_990">6 990 ₽</string>
    <string name="_03_15">03:15</string>
    <string name="_07_10">07:10</string>
    <string name="_4_hours_on_the_road">4ч в пути</string>
    <string name="without_transfers">Без пересадок</string>
    <string name="vko">VKO</string>
    <string name="aer">AER</string>
    <string name="Budapest">Будапешт</string>
    <string name="_22_264">от 22 264 ₽</string>
    <string name="Feb_8_Sat">8 фев, сб</string>
    <string name="phuket">Пхукет</string>
</resources>