<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="8dp"
    android:paddingTop="12dp">

    <com.google.android.material.chip.Chip
        android:id="@+id/ticket_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/most_convenient"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:chipCornerRadius="50dp"
        app:chipBackgroundColor="@color/blue"
        app:chipEndPadding="8dp"
        app:chipMinHeight="24dp"
        app:chipMinTouchTargetSize="24dp"
        app:chipStartPadding="8dp"
        app:chipStrokeWidth="0dp"
        app:ensureMinTouchTargetSize="false"
        app:textEndPadding="0dp"
        app:textStartPadding="0dp"
        android:elevation="4dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/grey_3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6_990"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <View
                android:layout_width="16dp"
                android:layout_height="1dp"
                app:layout_constraintStart_toEndOf="@id/departure_time"
                app:layout_constraintEnd_toStartOf="@id/arrival_time"
                app:layout_constraintTop_toTopOf="@id/departure_time"
                app:layout_constraintBottom_toBottomOf="@id/arrival_time"
                android:background="@color/white"
                />


            <TextView
                android:id="@+id/departure_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/_03_15"
                android:textColor="@color/white"
                android:layout_marginStart="8dp"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/company_icon_container"
                app:layout_constraintTop_toBottomOf="@id/price" />

            <TextView
                android:id="@+id/arrival_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_07_10"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/sf_pro_display_regular"
                app:layout_constraintTop_toTopOf="@id/departure_time"
                app:layout_constraintStart_toEndOf="@id/departure_time"
                android:layout_marginStart="24dp"/>


            <androidx.cardview.widget.CardView
                android:id="@+id/company_icon_container"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:layout_constraintTop_toTopOf="@id/departure_time"
                app:layout_constraintBottom_toBottomOf="@id/departure_code"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/company_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/red"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4_hours_on_the_road"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/sf_pro_display_regular"
                app:layout_constraintTop_toTopOf="@id/departure_time"
                app:layout_constraintStart_toEndOf="@id/arrival_time"
                android:layout_marginStart="24dp"/>

            <TextView
                android:id="@+id/duration_divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"
                android:layout_marginHorizontal="4dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/duration"
                app:layout_constraintTop_toTopOf="@id/duration"
                app:layout_constraintBottom_toBottomOf="@id/duration"/>

            <TextView
                android:id="@+id/transfer_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/without_transfers"
                android:textColor="@color/white"
                android:layout_marginStart="4dp"
                android:textSize="14sp"
                android:fontFamily="@font/sf_pro_display_regular"
                app:layout_constraintTop_toTopOf="@id/departure_time"
                app:layout_constraintStart_toEndOf="@id/duration_divider"
                />

            <TextView
                android:id="@+id/departure_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/vko"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/company_icon_container"
                app:layout_constraintTop_toBottomOf="@id/departure_time" />

            <TextView
                android:id="@+id/arrival_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aer"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/sf_pro_display_regular"
                app:layout_constraintTop_toTopOf="@id/departure_code"
                app:layout_constraintStart_toStartOf="@id/arrival_time"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>
