<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.main.MainFragment"
    android:background="@color/black">

    <TextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="26dp"
        android:text="@string/search_for_cheap_flights"
        android:textAlignment="center"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:textSize="22sp"
        android:textColor="@color/white"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/searchCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="38dp"
        app:cardBackgroundColor="@color/grey_2"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/main_text">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/grey_4"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/search"
                    app:tint="@color/grey_6" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/departureEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/where_is_Moscow_from"
                        android:inputType="textPersonName"
                        android:digits="абвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey_6"
                        android:textSize="16sp"
                        android:theme="@style/AppTextRegular" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginVertical="12dp"
                        android:background="@color/grey_6" />

                    <EditText
                        android:id="@+id/arrivalEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/where_to_Turkeys"
                        android:inputType="textPersonName"
                        android:digits="абвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey_6"
                        android:textSize="16sp"
                        android:theme="@style/AppTextRegular" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/searchCardView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/musical_hotel"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/sf_pro_display_semibold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/offers_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/text_music"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"
        tools:listitem="@layout/offers"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:indeterminateTint="@color/blue"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/text_music"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>