<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.TicketViewingFragment"
    android:background="@color/black">
    
    <androidx.cardview.widget.CardView
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        android:elevation="0dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/grey_3"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/left_arrow"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/search_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/back_button"
                app:layout_constraintTop_toTopOf="@+id/back_button"
                app:layout_constraintBottom_toBottomOf="@+id/back_button"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/route_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Moscow_Sochi"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:fontFamily="@font/sf_pro_display_regular"/>

                <TextView
                    android:id="@+id/details_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/February_23_1_passenger"
                    android:textSize="14sp"
                    android:textColor="@color/grey_6"
                    android:fontFamily="@font/sf_pro_display_regular"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tickets_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/header_container"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="80dp"
        android:clipToPadding="false"
        tools:itemCount="4"
        tools:listitem="@layout/item_ticket_view"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header_container"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="50dp"
        app:cardBackgroundColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/filter_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/filters"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:fontFamily="@font/sf_pro_display_regular"
                android:backgroundTint="#00000000"
                android:drawableLeft="@drawable/filter"
                app:rippleColor="@color/white"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textAllCaps="false"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/price_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/price_chart"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:fontFamily="@font/sf_pro_display_regular"
                android:backgroundTint="#00000000"
                android:drawableLeft="@drawable/chart"
                app:rippleColor="@color/white"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textAllCaps="false"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>